# tap-imbox

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
tap_imbox/: __init__.py  client.py  streams.py  tap.py
tap_imbox/schemas/: grab_ticket.json  list_tickets.json
